# Proto

./: CMakeLists.txt  Links.txt  visual.bat
Enlivengine/Enlivengine/: CMakeLists.txt
Enlivengine/Enlivengine/Enlivengine/: Config.hpp
Enlivengine/Enlivengine/Enlivengine/Application/: ActionSystem.cpp  Application.cpp  Application.hpp  AudioSystem.cpp  ImGuiToolManager.cpp  ResourceManager.cpp  ResourceManager.inl  Window.cpp
Enlivengine/Enlivengine/Enlivengine/Core/: Components.hpp  DataFileSpecialization.inl  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  ObjectEditor.hpp  ObjectEditorSpecialization.inl  World.cpp  World.hpp
Enlivengine/Enlivengine/Enlivengine/Graphics/: Animation.cpp  AnimationController.cpp  AnimationStateMachine.cpp  Color.cpp  DebugDraw.hpp  LinearColor.cpp  LinearColor.hpp  SFMLWrapper.hpp  ScreenshotSystem.cpp
Enlivengine/Enlivengine/Enlivengine/Map/: Map.cpp  PropertyHolder.cpp  TileLayer.cpp  Tileset.cpp
Enlivengine/Enlivengine/Enlivengine/Math/: Color.hpp  Matrix3.hpp  Matrix4.hpp  Noise.cpp  Quaternion.hpp  Utilities.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
Enlivengine/Enlivengine/Enlivengine/System/: Array.hpp  Assert.hpp  ClassManager.hpp  Debugger.cpp  Debugger.hpp  Hash.cpp  Hash.hpp  Log.cpp  Log.hpp  MemoryAllocator.cpp  MemoryAllocator.hpp  Meta.cpp  Meta.hpp  MetaEnum.hpp  ParserIni.cpp  PrimitiveTypes.hpp  String.cpp  String.hpp  (+3 more)
Enlivengine/EnlivengineExamples/: EngineExample.cpp  SystemExample.cpp
Enlivengine/EnlivengineTests/System/: Hash_Tests.cpp
Enlivengine/EnlivengineThirdParty/: CMakeLists.txt  README.md
Proto/: Blueprint.hpp  BlueprintEditor.cpp  CMakeLists.txt  ColorGradient.hpp  ComponentManager.cpp  ComponentManager.hpp  Components.cpp  Components.hpp  CoreComponents.hpp  DataFile.cpp  DataFile.hpp  DataFileSpecialization.hpp  DataFileSpecialization.inl  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  GameSingleton.cpp  GameSingleton.hpp  GameState.cpp  GameState.hpp  Meta.hpp  NoiseEditor.cpp  NoiseEditor.hpp  ObjectEditor.hpp  ObjectEditorSpecialization.hpp  ObjectEditorSpecialization.inl  main.cpp
(+7 files in other folders)
